--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type='module' src='./scripts/main.js' defer></script>
+  <title>Mega Lorem Ipsum - Andre Sammut</title>
+</head>
+<body>
+  <header>
+    <h1>Mega Lorem Ipsum</h1>
+  </header>
+  <main>
+    <table id='movie-table'>
+      <caption>
+        Netflix Movie Data
+      </caption>
+      <!-- col/colgroup-->
+      <thead>
+        <tr>
+          <th scope='col'>Name</th>
+          <th scope='col'>Year</th>
+          <th scope='col'>Rating</th>
+          <th scope='col'>Genre</th>
+          <th scope='col'>Duration</th>
+
+          <th scope='col'>Edit</th>
+          <th scope='col'>Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+
+
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan='7'>
+            <button>
+              Add a new movie
+            </button>
+          </td>
+        </tr>
+      </tfoot>
+    </table>
+  </main>
+  <footer>
+    <p>Besedo Full Stack Developer Technical Test</p>
+  </footer>
+</body>
 </html>
