--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <script type='module' src='./scripts/main.js' defer></script>
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/index.css">
+
   <title>Mega Lorem Ipsum - Andre Sammut</title>
 </head>
 <body>
@@ -12,37 +16,44 @@
     <h1>Mega Lorem Ipsum</h1>
   </header>
   <main>
-    <table id='movie-table'>
-      <caption>
-        Netflix Movie Data
-      </caption>
-      <!-- col/colgroup-->
-      <thead>
-        <tr>
-          <th scope='col'>Name</th>
-          <th scope='col'>Year</th>
-          <th scope='col'>Rating</th>
-          <th scope='col'>Genre</th>
-          <th scope='col'>Duration</th>
+    <div id='scroll-lock-container'>
+      <table id='movie-table' aria-label='Table of IMDb Movie Data'>
+        <caption>
+          IMDb Movie Data
+        </caption>
+        <colgroup>
+          <col id='name-column'>
+          <col id='year-column'>
+          <col id='rating-column'>
+          <col id='genre-column'>
+          <col id='duration-column'>
+          <colgroup id='actions-column' span='2'>
+            <col>
+            <col>
+          </colgroup>
+        </colgroup>
+        <thead>
+          <tr>
+            <th scope='col' class='name-header'>Name</th>
+            <th scope='col'>Year</th>
+            <th scope='col'>Rating</th>
+            <th scope='col' class='genre-header'>Genre</th>
+            <th scope='col'>Duration</th>
+            <td colspan='2'></td>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
 
-          <th scope='col'>Edit</th>
-          <th scope='col'>Delete</th>
-        </tr>
-      </thead>
-      <tbody>
+    <div>
+      <button type='button' aria-label='Add Movie'>
+        <img src='./img/add.svg' aria-hidden>
+      </button>
+    </div>
+    
 
-
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan='7'>
-            <button>
-              Add a new movie
-            </button>
-          </td>
-        </tr>
-      </tfoot>
-    </table>
   </main>
   <footer>
     <p>Besedo Full Stack Developer Technical Test</p>
